# ilutzim-shift-management

./: .clinerules  .env.docker  .env.production.example  .gitignore  APP_OVERVIEW.md  Dockerfile  README.md  dev-stop.sh  dev.sh  docker-compose.test.yml  docker-compose.yml  railway.json  אילוצים_דמו_מלא.xlsx
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  messages.py  scheduler.py  seed.py  version.py
backend/scripts/: seed_attendance_demo.py
backend/tests/: conftest.py  test_acknowledge_violation.py  test_activation_profile_model.py  test_actual_assignments_api.py  test_actual_excel_export.py  test_actual_export_parity.py  test_actual_positions_api.py  test_actual_reinforcements.py  test_actual_schedule_e2e.py  test_actual_schedule_models.py  test_actual_schedule_seeding.py  test_admin_is_active_enforcement.py  test_admin_management_api.py  test_admin_management_service.py  test_admin_published_guard.py  test_admin_submission.py  test_assignment_api.py  test_assignment_schemas.py  test_assignment_service.py  test_attendance_adjustments.py  test_attendance_alerts.py  test_attendance_api.py  test_attendance_comparison.py  test_attendance_consent.py  test_attendance_event_model.py  test_attendance_locked_weeks.py  test_attendance_pairing.py  test_attendance_payroll_readmodel.py  test_attendance_punch.py  test_attendance_settings.py  (+93 more)
(+454 files in other folders)
